@@ -8,15 +8,9 @@
 <h1>The GNU Compiler for the Java<sup><a href="tm.html"><small>TM</small></a></sup> Programming Language</h1>
 
 <p>GCJ is a portable, optimizing, ahead-of-time compiler for the Java
-Programming Language.  It can compile:</p>
-<ul>
-<li>Java source code directly to native machine code,</li>
-<li>Java source code to Java bytecode (class files),</li>
-<li>and Java bytecode to native machine code.</li>
-</ul>
-
-<p>GCJ can also be configured as a cross-compiler, suitable for embedded systems
-programming.</p>
+Programming Language.  It can compile Java source code to Java bytecode
+(class files) or directly to native machine code, and Java bytecode to
+native machine code.</p>
 
 <p>Compiled applications are linked with the GCJ runtime,
 <code>libgcj</code>, which provides the core class libraries, a
@@ -29,9 +23,10 @@ supports most of the 1.4 libraries plus some 1.5 additions.
 </p>
 
 <p>
-Recent versions of the GNU debugger, <a
-href="http://www.gnu.org/software/gdb/">GDB</a> support GCJ (<a
-href="gdb.html">short tutorial</a>).
+GCJ can also be configured as a cross-compiler, suitable for embedded
+systems programming.  Recent versions of the <a
+href="http://www.gnu.org/software/gdb/">GNU Debugger</a> support GCJ
+(<a href="gdb.html">short tutorial</a>).
 </p>
 
 
@@ -109,23 +104,6 @@ notes</a>) into GCJ.</dd>
 <dt>February 8, 2006</dt>
 <dd>Mark Wielaard has written &quot;<a href="http://lwn.net/Articles/171139/">A
 look at GCJ 4.1</a>&quot; for LWN.net.</dd>
-
-<dt>January 16, 2006</dt>
-<dd>Mark Wielaard has imported <a
-href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.20 (<a
-href="http://www.gnu.org/software/classpath/announce/20060113.html">release
-notes</a>) into GCJ.</dd>
-
-<dt>November 17, 2005</dt>
-<dd>Mark Wielaard has imported <a
-href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.19 (<a
-href="http://www.gnu.org/software/classpath/announce/20051102.html">release
-notes</a>) into GCJ.</dd>
-
-<dt>October 12, 2005</dt>
-<dd>The October 2005 issue of Red Hat Magazine contains the article
-&quot;<a href="http://www.redhat.com/magazine/012oct05/features/java/">The
-state of Java on Linux</a>&quot; by Tom Tromey.</dd>
 
 </dl>
 
