@@ -12,6 +12,23 @@
 
 <dl class="news">
 
+<dt>January 16, 2006</dt>
+<dd>Mark Wielaard has imported <a
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.20 (<a
+href="http://www.gnu.org/software/classpath/announce/20060113.html">release
+notes</a>) into GCJ.</dd>
+
+<dt>November 17, 2005</dt>
+<dd>Mark Wielaard has imported <a
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.19 (<a
+href="http://www.gnu.org/software/classpath/announce/20051102.html">release
+notes</a>) into GCJ.</dd>
+
+<dt>October 12, 2005</dt>
+<dd>The October 2005 issue of Red Hat Magazine contains the article
+&quot;<a href="http://www.redhat.com/magazine/012oct05/features/java/">The
+state of Java on Linux</a>&quot; by Tom Tromey.</dd>
+
 <dt>September 23, 2005</dt>
 <dd>Tom Tromey has imported <a
 href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.18 (<a
