@@ -1,3 +1,8 @@
+2006-07-02  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* index.html: Shorten introduction.  Rotate some news...
+	* news.html: ...to here.
+
 2006-07-01  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* index.html: Rotate news from here...
